--- a/packages/stateofjs/lib/i18n/state-of-js/yml/es-AR.yml
+++ b/packages/stateofjs/lib/i18n/state-of-js/yml/es-AR.yml
@@ -8,79 +8,79 @@ translations:
 
   - key: general.survey_intro_js2019
     t: >
-        The JavaScript world could use a bit of classification.
+        Al mundo de JavaScript le serviría un poco de clasificación.
 
 
-        Since 2016, this survey has collected 
-        data from over 20,000 developers each year to identify current and upcoming trends.
+        Desde el 2016, esta encuesta ha recolectado
+        información de más de 20000 desarrolladores cada año para identificar tendencias actuales y próximas.
 
 
-        Take the survey and help us find out which libraries developers 
-        want to learn next, which have the best satisfaction ratings, and much more.
+        Llená esta encuesta y ayudanos a determinar qué librerías quieren aprender
+        los desarrolladores, cuales tienen los mejores ratings de satisfacción, y mucho más.
 
   ###########################################################################
   # Sections
   ###########################################################################
 
   - key: sections.syntax.title
-    t: Syntax
+    t: Sintaxis
   - key: sections.syntax.description
-    t: The grammar of JavaScript.
+    t: La gramática de JavaScript.
   
   - key: sections.language.title
-    t: Language
+    t: Lenguaje
   - key: sections.language.description
-    t: The vocabulary of JavaScript.
+    t: El vocabulario de JavaScript.
 
   - key: sections.data_structures.title
-    t: Data Structures
+    t: Estructuras de Datos
   - key: sections.data_structures.description
-    t: How you store and manipulate data.
+    t: Cómo almacenás y manipulás datos.
 
   - key: sections.browser_apis.title
-    t: Browser APIs
+    t: APIs del Navegador
   - key: sections.browser_apis.description
-    t: The features provided by the browser.
+    t: Las funcionalidades provistas por el navegador.
 
   - key: sections.other_features.title
-    t: Other Features
+    t: Otras funcionalidades
   - key: sections.other_features.description
-    t: Other technologies and patterns
+    t: Otras tecnologías y patrones
 
   - key: sections.patterns.title
-    t: Patterns
+    t: Patrones
   - key: sections.patterns.description
-    t: How you prefer writing code
+    t: Cómo preferís escribir código
 
   - key: sections.javascript_flavors.title
-    t: JavaScript Flavors
+    t: Variantes de JavaScript
   - key: sections.javascript_flavors.description
-    t: Languages that compile to JavaScript
+    t: Lenguajes que compilan a JavaScript
 
   - key: sections.front_end_frameworks.title
-    t: Front-end Frameworks
+    t: Frameworks Front-end
   - key: sections.front_end_frameworks.description
-    t: Front-end frameworks and libraries
+    t: Frameworks y librerías front-end
 
   - key: sections.datalayer.title
-    t: Data Layer
+    t: Capa de datos
   - key: sections.datalayer.description
-    t: Loading and managing data in your app
+    t: Cargando y administrando datos en tu aplicación
 
   - key: sections.back_end_frameworks.title
-    t: Back-end Frameworks
+    t: Frameworks Back-end
   - key: sections.back_end_frameworks.description
-    t: JavaScript on the server
+    t: JavaScript en el servidor
 
   - key: sections.testing.title
     t: Testing
   - key: sections.testing.description
-    t: Tools for testing your code
+    t: Herramientas para evaluar tu código
 
   - key: sections.mobile_desktop.title
-    t: Mobile & Desktop
+    t: Móvil y Escritorio
   - key: sections.mobile_desktop.description
-    t: JavaScript for mobile devices and desktop apps
+    t: JavaScript para dispositivos móviles y aplicaciones de escritorio
 
   ###########################################################################
   # Options
@@ -88,23 +88,23 @@ translations:
 
   # CSS for print
   - key: options.css_for_print.0
-    t: I (almost) never write print styles
+    t: (Casi) Nunca escribo estilos para impresión
   - key: options.css_for_print.1
-    t: I occasionally write print styles
+    t: Ocasionalmente escribo estilos para impresión
   - key: options.css_for_print.2
-    t: I write print styles as part of most projects
+    t: Escribo estilos para impresión como parte de la mayoría de los proyectos
   - key: options.css_for_print.3
-    t: I focus mainly on CSS for print
+    t: Me enfoco principalmente en estilos para impresión
 
   # CSS for email
   - key: options.css_for_email.0
-    t: I (almost) never write CSS for email clients
+    t: (Casi) nunca escribo CSS para clientes de email
   - key: options.css_for_email.1
-    t: I occasionally write CSS for email clients
+    t: Ocasionalmente escribo CSS para clientes de email
   - key: options.css_for_email.2
-    t: I write CSS for email clients as part of most projects
+    t: Escribo CSS para clientes de email como parte de la mayoría de los proyectos
   - key: options.css_for_email.3
-    t: I focus mainly on CSS for email clients
+    t: Me enfoco principalmente en CSS para clientes de email
 
   ###########################################################################
   # Features
@@ -112,17 +112,17 @@ translations:
 
   # syntax
   - key: features.destructuring
-    t: Destructuring
+    t: Desestructuración
   - key: features.destructuring.description
-    t: 'Example: <code>const { foo } = bar</code>'
+    t: 'Ejemplo: <code>const { foo } = bar</code>'
   - key: features.spread_operator
-    t: Spread operator
+    t: Operador de propagación (spread)
   - key: features.spread_operator.description
-    t: 'Example: <code>[...array1, ...array2]</code>'
+    t: 'Ejemplo: <code>[...array1, ...array2]</code>'
   - key: features.arrow_functions
-    t: Arrow Functions
+    t: Funciones Arrow
   - key: features.arrow_functions.description
-    t: 'Example: <code>const foo = () => {}</code>'
+    t: 'Ejemplo: <code>const foo = () => {}</code>'
 
   # language
   - key: features.proxies
@@ -130,13 +130,13 @@ translations:
   - key: features.async_await
     t: Async/Await
   - key: features.promises
-    t: Promises
+    t: Promesas
   - key: features.decorators
-    t: Decorators
+    t: Decoradores
   - key: features.decorators.description
     t:  >
-      In its simplest form, a decorator is simply a way of 
-      wrapping one piece of code with another — literally “decorating” it. 
+      En su forma más simple, un decorador es una forma de
+      envolver una pieza de código on otra — literalmente "decorándola".
 
   # data structures
   - key: features.maps
@@ -176,41 +176,41 @@ translations:
 
   # other features
   - key: features.pwa
-    t: Progressive Web Apps (PWA)
+    t: Aplicaciones Web Progresivas (PWA)
   - key: features.wasm
     t: WebAssembly (WASM)
   
   # patterns
   - key: patterns.object_oriented_programming
-    t: Object-Oriented Programming
+    t: Programación Orientada a Objectos
   - key: features.functional_programming
-    t: Functional Programming
+    t: Programación Funcional
   - key: features.reactive_programming
-    t: Reactive Programming
+    t: Programación Reactiva
 
   ###########################################################################
   # Opinions
   ###########################################################################
 
   - key: opinions.js_moving_in_right_direction
-    t: JavaScript is moving in the right direction
+    t: JavaScript se está moviendo en la dirección correcta
     
   - key: opinions.building_js_apps_overly_complex
-    t: Building JavaScript apps is overly complex right now
+    t: Construir aplicaciones JavaScript es demasiado complejo actualmente
     
   - key: opinions.js_over_used_online
-    t: JavaScript is over-used online
+    t: JavaScript se usa demasiado online
     
   - key: opinions.enjoy_building_js_apps
-    t: I enjoy building JavaScript apps
+    t: Me gusta construir aplicaciones JavaScript
     
   - key: opinions.would_like_js_to_be_main_lang
-    t: I would like JavaScript to be my main programming language
+    t: Me gustaría que JavaScript sea mi lenguaje de programación principal
     
   - key: opinions.js_ecosystem_changing_to_fast
-    t: The JavaScript ecosystem is changing too fast
+    t: El ecosistema de JavaScript cambia demasiado rápido
     
   - key: opinions.missing_from_js
-    t: What do you feel is currently missing from JavaScript?
+    t: ¿Qué pensás que le falta a JavaScript actualmente?
   - key: opinions.missing_from_js.description
-    t: Features you'd like to see in JavaScript one day.
+    t: Funcionalidades que te gustaría ver en JavaScript algún día.
