--- a/packages/stateofjs/lib/i18n/results/yml/es-AR.yml
+++ b/packages/stateofjs/lib/i18n/results/yml/es-AR.yml
@@ -1,4 +1,4 @@
-locale: en-US
+locale: es-AR
 translations:
   ###########################################################################
   # General
