--- a/packages/stateofjs/lib/i18n/state-of-css/yml/model.yml
+++ b/packages/stateofjs/lib/i18n/state-of-css/yml/model.yml
@@ -239,33 +239,174 @@ translations:
   ###########################################################################
 
   # units & selectors
+  
   - key: features.units # TODO
     t: Units
   - key: features.units.description # TODO
     t: Which of these CSS units have you used?
+
+  - key: px # TODO
+    t: px
+  - key: pt # TODO
+    t: pt
+  - key: percent # TODO
+    t: '%'
+  - key: em # TODO
+    t: em
+  - key: rem # TODO
+    t: rem
+  - key: vh_vw # TODO
+    t: vh, vw
+  - key: vmin_vmax # TODO
+    t: vmin, vmax
+  - key: ch # TODO
+    t: ch
+  - key: ex # TODO
+    t: ex
+  - key: mm # TODO
+    t: mm
+  - key: cm # TODO
+    t: cm
+  - key: in # TODO
+    t: in
 
   - key: features.pseudo_elements # TODO
     t: Pseudo Elements
   - key: features.pseudo_elements.description # TODO
     t: Which of these CSS selectors have you used?
 
+  - key: before # TODO
+    t: '::before'
+  - key: after # TODO
+    t: '::after'
+  - key: first_line # TODO
+    t: '::first-line'
+  - key: first_letter # TODO
+    t: '::first-letter'
+  - key: selection # TODO
+    t: '::selection'
+  - key: placeholder # TODO
+    t: '::placeholder'
+  - key: marker # TODO
+    t: '::marker'
+  - key: backdrop # TODO
+    t: '::backdrop'
+
   - key: features.combinators # TODO
     t: Combinators
+
+  - key: descendant # TODO
+    t: div span (descendant)
+  - key: child # TODO
+    t: div > span (child)
+  - key: next_subling # TODO
+    t: div + div (next sibling)
+  - key: subsequent_sibling # TODO
+    t: div ~ div (subsequent sibling)
 
   - key: features.tree_document_structure # TODO
     t: Tree / Document Structure
 
+  - key: root # TODO
+    t: :root
+  - key: empty # TODO
+    t: :empty
+  - key: not # TODO
+    t: :not()
+  - key: nth_child # TODO
+    t: :nth-child()
+  - key: nth_last_child # TODO
+    t: :nth-last-child()
+  - key: first_child # TODO
+    t: :first-child
+  - key: last_child # TODO
+    t: :last-child
+  - key: only_child # TODO
+    t: :only-child
+  - key: nth_of_type # TODO
+    t: :nth-of-type()
+  - key: nth_last_of_type # TODO
+    t: :nth-last-of-type()
+  - key: first_of_type # TODO
+    t: :first-of-type
+  - key: last_of_type # TODO
+    t: :last-of-type
+  - key: only_of_type # TODO
+    t: :only-of-type
+  - key: lang # TODO
+    t: :lang()
+  - key: is # TODO
+    t: :is()
+  - key: where # TODO
+    t: :where()
+  - key: has # TODO
+    t: :has()
+
   - key: features.attributes # TODO
     t: Attributes
   
+  - key: presence # TODO
+    t: div[foo] (Presence)
+  - key: equality # TODO
+    t: div[foo="bar"] (Equality)
+  - key: starts_with # TODO
+    t: div[foo^="bar"] (Starts with)
+  - key: ends_with # TODO
+    t: div[foo$="bar"] (Ends with)
+  - key: contains_word # TODO
+    t: div[foo~="bar"] (Contains word)
+  - key: contains_substring # TODO
+    t: div[foo*="bar"] (Contains substring)
+
   - key: features.links_urls # TODO
     t: Links/URLs
+
+  - key: any_link # TODO
+    t: :any-link
+  - key: link_visited # TODO
+    t: :link and :visited
+  - key: local_link # TODO
+    t: :local-link
+  - key: target # TODO
+    t: :target
 
   - key: features.interaction # TODO
     t: Interaction
   
+  - key: hover # TODO
+    t: :hover
+  - key: active # TODO
+    t: :active
+  - key: focus # TODO
+    t: :focus
+  - key: focus_within # TODO
+    t: :focus-within
+  - key: focus_visible # TODO
+    t: :focus-visible
+
   - key: features.form_controls # TODO
     t: Form Controls
+
+  - key: enabled_disabled # TODO
+    t: :enabled and :disabled
+  - key: read_only_write # TODO
+    t: :read-only and :read-write
+  - key: placeholder_shown # TODO
+    t: :placeholder-shown
+  - key: default # TODO
+    t: :default
+  - key: checked # TODO
+    t: :checked
+  - key: indeterminate # TODO
+    t: :indeterminate
+  - key: valid_invalid # TODO
+    t: :valid and :invalid
+  - key: user_invalid # TODO
+    t: :user-invalid
+  - key: in_out_range # TODO
+    t: :in-range and :out-of-range
+  - key: required_optional # TODO
+    t: :required and :optional
 
   ###########################################################################
   # Tools
