--- a/packages/stateofjs/lib/i18n/state-of-css/yml/en-US.yml
+++ b/packages/stateofjs/lib/i18n/state-of-css/yml/en-US.yml
@@ -238,35 +238,34 @@ translations:
   # Units & Selectors
   ###########################################################################
 
-  # units & selectors
   - key: features.units
     t: Units
   - key: features.units.description
     t: Which of these CSS units have you used?
 
-  - key: px
+  - key: options.units.px
     t: px
-  - key: pt
+  - key: options.units.pt
     t: pt
-  - key: percent
+  - key: options.units.percent
     t: '%'
-  - key: em
+  - key: options.units.em
     t: em
-  - key: rem
+  - key: options.units.rem
     t: rem
-  - key: vh_vw
+  - key: options.units.vh_vw
     t: vh, vw
-  - key: vmin_vmax
+  - key: options.units.vmin_vmax
     t: vmin, vmax
-  - key: ch
+  - key: options.units.ch
     t: ch
-  - key: ex
+  - key: options.units.ex
     t: ex
-  - key: mm
+  - key: options.units.mm
     t: mm
-  - key: cm
+  - key: options.units.cm
     t: cm
-  - key: in
+  - key: options.units.in
     t: in
 
   - key: features.pseudo_elements
@@ -274,137 +273,137 @@ translations:
   - key: features.pseudo_elements.description
     t: Which of these CSS selectors have you used?
 
-  - key: before
+  - key: options.pseudo_elements.before
     t: '::before'
-  - key: after
+  - key: options.pseudo_elements.after
     t: '::after'
-  - key: first_line
+  - key: options.pseudo_elements.first_line
     t: '::first-line'
-  - key: first_letter
+  - key: options.pseudo_elements.first_letter
     t: '::first-letter'
-  - key: selection
+  - key: options.pseudo_elements.selection
     t: '::selection'
-  - key: placeholder
+  - key: options.pseudo_elements.placeholder
     t: '::placeholder'
-  - key: marker
+  - key: options.pseudo_elements.marker
     t: '::marker'
-  - key: backdrop
+  - key: options.pseudo_elements.backdrop
     t: '::backdrop'
 
   - key: features.combinators
     t: Combinators
 
-  - key: descendant
+  - key: options.combinators.descendant
     t: div span (descendant)
-  - key: child
+  - key: options.combinators.child
     t: div > span (child)
-  - key: next_subling
+  - key: options.combinators.next_subling
     t: div + div (next sibling)
-  - key: subsequent_sibling
+  - key: options.combinators.subsequent_sibling
     t: div ~ div (subsequent sibling)
 
   - key: features.tree_document_structure
     t: Tree / Document Structure
 
-  - key: root
+  - key: options.tree_document_structure.root
     t: :root
-  - key: empty
+  - key: options.tree_document_structure.empty
     t: :empty
-  - key: not
+  - key: options.tree_document_structure.not
     t: :not()
-  - key: nth_child
+  - key: options.tree_document_structure.nth_child
     t: :nth-child()
-  - key: nth_last_child
+  - key: options.tree_document_structure.nth_last_child
     t: :nth-last-child()
-  - key: first_child
+  - key: options.tree_document_structure.first_child
     t: :first-child
-  - key: last_child
+  - key: options.tree_document_structure.last_child
     t: :last-child
-  - key: only_child
+  - key: options.tree_document_structure.only_child
     t: :only-child
-  - key: nth_of_type
+  - key: options.tree_document_structure.nth_of_type
     t: :nth-of-type()
-  - key: nth_last_of_type
+  - key: options.tree_document_structure.nth_last_of_type
     t: :nth-last-of-type()
-  - key: first_of_type
+  - key: options.tree_document_structure.first_of_type
     t: :first-of-type
-  - key: last_of_type
+  - key: options.tree_document_structure.last_of_type
     t: :last-of-type
-  - key: only_of_type
+  - key: options.tree_document_structure.only_of_type
     t: :only-of-type
-  - key: lang
+  - key: options.tree_document_structure.lang
     t: :lang()
-  - key: is
+  - key: options.tree_document_structure.is
     t: :is()
-  - key: where
+  - key: options.tree_document_structure.where
     t: :where()
-  - key: has
+  - key: options.tree_document_structure.has
     t: :has()
 
   - key: features.attributes
     t: Attributes
   
-  - key: presence
+  - key: options.attributes.presence
     t: div[foo] (Presence)
-  - key: equality
+  - key: options.attributes.equality
     t: div[foo="bar"] (Equality)
-  - key: starts_with
+  - key: options.attributes.starts_with
     t: div[foo^="bar"] (Starts with)
-  - key: ends_with
+  - key: options.attributes.ends_with
     t: div[foo$="bar"] (Ends with)
-  - key: contains_word
+  - key: options.attributes.contains_word
     t: div[foo~="bar"] (Contains word)
-  - key: contains_substring
+  - key: options.attributes.contains_substring
     t: div[foo*="bar"] (Contains substring)
 
   - key: features.links_urls
     t: Links/URLs
 
-  - key: any_link
+  - key: options.links_urls.any_link
     t: :any-link
-  - key: link_visited
+  - key: options.links_urls.link_visited
     t: :link and :visited
-  - key: local_link
+  - key: options.links_urls.local_link
     t: :local-link
-  - key: target
+  - key: options.links_urls.target
     t: :target
 
   - key: features.interaction
     t: Interaction
   
-  - key: hover
+  - key: options.interaction.hover
     t: :hover
-  - key: active
+  - key: options.interaction.active
     t: :active
-  - key: focus
+  - key: options.interaction.focus
     t: :focus
-  - key: focus_within
+  - key: options.interaction.focus_within
     t: :focus-within
-  - key: focus_visible
+  - key: options.interaction.focus_visible
     t: :focus-visible
 
   - key: features.form_controls
     t: Form Controls
 
-  - key: enabled_disabled
+  - key: options.form_controls.enabled_disabled
     t: :enabled and :disabled
-  - key: read_only_write
+  - key: options.form_controls.read_only_write
     t: :read-only and :read-write
-  - key: placeholder_shown
+  - key: options.form_controls.placeholder_shown
     t: :placeholder-shown
-  - key: default
+  - key: options.form_controls.default
     t: :default
-  - key: checked
+  - key: options.form_controls.checked
     t: :checked
-  - key: indeterminate
+  - key: options.form_controls.indeterminate
     t: :indeterminate
-  - key: valid_invalid
+  - key: options.form_controls.valid_invalid
     t: :valid and :invalid
-  - key: user_invalid
+  - key: options.form_controls.user_invalid
     t: :user-invalid
-  - key: in_out_range
+  - key: options.form_controls.in_out_range
     t: :in-range and :out-of-range
-  - key: required_optional
+  - key: options.form_controls.required_optional
     t: :required and :optional
 
   ###########################################################################
