Translate intro better

--- a/packages/stateofjs/lib/i18n/state-of-css/yml/ru-RU.yml
+++ b/packages/stateofjs/lib/i18n/state-of-css/yml/ru-RU.yml
@@ -15,7 +15,7 @@ translations:
 
       
       И так после успеха нашего ежегодного опроса State Of JavaScript, 
-      мы решили взять на себя мир стилей и селекторов, чтобы помочь определить последние тенденции… 
+      мы решили заняться миром стилей и селекторов, чтобы помочь определить последние тенденции… 
       и попытаться преодолеть постоянно растущий “великий фронтенд разрыв”!
 
   ###########################################################################
